added buttons to navigate through the UI's easier and fixed order items to be able to remove items/cards from orders as well to create orders fine now

--- a/mtg-ui/src/app/app.html
+++ b/mtg-ui/src/app/app.html
@@ -9,6 +9,12 @@
         </p>
       </div>
     </div>
+    
+    <nav class="app-navigation">
+      <a routerLink="/cards" routerLinkActive="active" class="nav-btn">Cards</a>
+      <a routerLink="/orders" routerLinkActive="active" class="nav-btn">Orders</a>
+      <a routerLink="/workers" routerLinkActive="active" class="nav-btn">Workers</a>
+    </nav>
   </header>
 
   <section class="app-panel">
